# 1vibe13

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_unix.yml  lint.yml  publish-debug.yml  release.yml
Editor/: Editor Taskbar Utils.cpp  EditorMercs.cpp  LoadScreen.cpp  XML_ActionItems.cpp  editscreen.cpp  editscreen.h  selectwin.cpp
Ja2/: Credits.cpp  Fade Screen.cpp  Fade Screen.h  GameSettings.cpp  GameSettings.h  GameVersion.h  HelpScreen.cpp  Intro.cpp  Loading Screen.cpp  MPChatScreen.cpp  MPHostScreen.cpp  MPJoinScreen.cpp  MPScoreScreen.cpp  MainMenuScreen.cpp  MessageBoxScreen.cpp  SaveLoadGame.cpp  SaveLoadGame.h  SaveLoadScreen.cpp  XML_DifficultySettings.cpp  XML_IntroFiles.cpp  XML_Layout_MainMenu.cpp  gameloop.cpp  gamescreen.cpp  jascreens.cpp
Ja2/Res/: ja2.manifest  ja2.rc
Laptop/: AimFacialIndex.cpp  AimMembers.cpp  BobbyRGuns.cpp  BobbyRShipments.cpp  BriefingRoom.cpp  BriefingRoomM.cpp  CMakeLists.txt  IMP Attribute Selection.cpp  IMP Begin Screen.cpp  IMP Gear.cpp  IMP HomePage.cpp  IMP Personality Quiz.cpp  IMPVideoObjects.cpp  PostalService.cpp  XML_AIMAvailability.cpp  XML_BriefingRoom.cpp  XML_CampaignStatsEvents.cpp  XML_ConditionsForMercAvailability.cpp  XML_DeliveryMethods.cpp  XML_Email.cpp  XML_EmailMercAvailable.cpp  XML_EmailMercLevelUp.cpp  XML_History.cpp  XML_IMPPortraits.cpp  XML_IMPVoices.cpp  XML_OldAIMArchive.cpp  XML_ShippingDestinations.cpp  email.cpp  finances.cpp  florist Gallery.cpp  history.cpp  laptop.cpp  mercs Files.cpp  mercs.cpp  personnel.cpp
Multiplayer/: CMakeLists.txt  client.cpp  connect.h  network.h  server.cpp  transfer_rules.cpp
Multiplayer/ja2server/: README.md  ja2_mp.ini.sample  ja2server.cpp
Multiplayer/netshim/: BitStream.h  FileListTransfer.h  FileListTransferCBInterface.h  FileOperations.h  IncrementalReadInterface.h  MessageIdentifiers.h  RakAssert.h  RakNetStatistics.h  RakNetTypes.h  RakNetworkFactory.h  RakPeerInterface.h  RakSleep.h  SuperFastHash.h  netshim.cpp
Strategic/: AI Viewer.cpp  Assignments.cpp  Auto Resolve.cpp  Campaign Init.cpp  Facilities.cpp  Game Events.cpp  Ja25 Strategic Ai.cpp  LuaInitNPCs.cpp  Map Screen Helicopter.cpp  Map Screen Interface Bottom.cpp  Map Screen Interface Map Inventory.cpp  Map Screen Interface Map.cpp  Map Screen Interface.cpp  MiniEvents.cpp  PreBattle Interface.cpp  Queen Command.cpp  Quest Debug System.cpp  Quests.cpp  Rebel Command.cpp  Scheduling.cpp  Scheduling.h  Strategic AI.cpp  Strategic Mines LUA.cpp  Strategic Mines.cpp  Strategic Movement Costs.cpp  Strategic Movement.cpp  Strategic Pathing.cpp  Town Militia.cpp  UndergroundInit.cpp  XML_Army.cpp  XML_Bloodcats.cpp  XML_CoolnessBySector.cpp  XML_Creatures.cpp  XML_Facilities.cpp  XML_FacilityTypes.cpp  XML_Minerals.cpp  XML_SectorNames.cpp  XML_SquadNames.cpp  XML_UniformColors.cpp  mapscreen.cpp  (+1 more)
Tactical/: BinaryHeap.hpp  Bullets.h  Campaign.cpp  Dialogue Control.cpp  DisplayCover.cpp  End Game.cpp  Enemy Soldier Save.cpp  Faces.cpp  GAP.cpp  Handle Doors.cpp  Handle Items.cpp  Handle UI.cpp  Interface Dialogue.cpp  Interface Items.cpp  Interface Panels.cpp  Interface Utils.cpp  Interface Utils.h  Interface.cpp  Interface.h  Inventory Choosing.cpp  Item Types.cpp  Item Types.h  Items.cpp  Items.h  Keys.cpp  LOS.cpp  Minigame.cpp  Overhead Types.h  Overhead.cpp  Overhead.h  PATHAI.H  PATHAI.cpp  Points.cpp  Points.h  Rotting Corpses.cpp  Rotting Corpses.h  ShopKeeper Interface.cpp  Soldier Add.cpp  Soldier Ani.cpp  Soldier Control.cpp  (+76 more)
Tactical/LogicalBodyTypes/: AbstractXMLLoader.cpp  EnumeratorDB.cpp  Filter.cpp  FilterDB.cpp  PaletteDB.cpp  PaletteTable.cpp  PaletteTable.h  SurfaceCache.cpp  SurfaceDB.cpp
TacticalAI/: AIMain.cpp  AIUtils.cpp  DecideAction.cpp  FindLocations.cpp  Movement.cpp  NPC.cpp  ai.h
TileEngine/: Ambient Control.cpp  Explosion Control.cpp  Isometric Utils.cpp  LightEffects.cpp  Map Edgepoints.cpp  Radar Screen.cpp  Render Dirty.cpp  Render Fun.cpp  SaveLoadMap.cpp  Smell.cpp  SmokeEffects.cpp  Structure Internals.h  Tactical Placement GUI.cpp  XML_ExplosionData.cpp  lighting.cpp  overhead map.cpp  physics.cpp  renderworld.cpp  renderworld.h  structure.cpp  tiledef.cpp  worlddef.cpp  worlddef.h  worldman.cpp  worldman.h
Utils/: Animated ProgressBar.cpp  CMakeLists.txt  Cinematics Bink.cpp  Cinematics.cpp  Cursors.cpp  INIReader.cpp  INIReader.h  MapUtility.cpp  MercTextBox.cpp  Music Control.cpp  PopUpBox.cpp  Sound Control.cpp  Text Input.cpp  Timer Control.cpp  Timer Control.h  Win Util.cpp  XMLAccess.cpp  XML_Items.cpp  XML_Language.cpp  XML_SenderNameList.cpp  message.cpp  popup_callback.h
docs/: HARDCODED_ITEMS.md  LUA_5.x_MIGRATION.md  MAP_FORMAT.md  MULTI_LEVEL.md  OPTIMIZATION.md  RGBA8888_AND_ARTWORK.md  SAVE_FORMAT.md  SDL3_PORT.md  char16-ondisk-io.md
ext/: versions.txt
ext/VFS/ext/7z/: CMakeLists.txt
ext/VFS/include/vfs/: vfs_config.h
ext/VFS/include/vfs/Ext/7z/: vfs_7z_library.h
ext/VFS/include/vfs/Tools/: vfs_allocator.h  vfs_property_container.h
ext/VFS/src/Core/: vfs_string.cpp
ext/VFS/src/Ext/7z/: vfs_7z_library.cpp  vfs_create_7z_library.cpp
ext/VFS/src/Tools/: vfs_parser_tools.cpp
lua/: CMakeLists.txt  lua.cpp  lua_class_interface.h  lua_state.cpp  lua_table.cpp  lwstring.cpp
sgp/: Button System.cpp  Button System.h  CMakeLists.txt  DEBUG.H  DEBUG.cpp  FileMan.cpp  FileMan.h  Font.cpp  Font.h  LibraryDataBase.cpp  MemMan.cpp  MemMan.h  PCX.cpp  PngLoader.cpp  Random.cpp  STCI.cpp  SaveSerializer.cpp  SaveSerializer.h  WinFont.cpp  WinFont.h  fwd_decl.h  himage.cpp  himage.h  impTGA.cpp  input.cpp  line.cpp  mousesystem.cpp  msvc_compat.h  pixfmt.h  sdl_input.cpp  sdl_input.h  sdl_video.cpp  sdl_vsurface.cpp  sgp.cpp  sgp_bounded_string.h  sgp_non_win32_globals.cpp  sgp_non_win32_stubs.cpp  sgp_portable_globals.cpp  sgp_portable_stubs.cpp  shading.cpp  (+9 more)
tests/: CMakeLists.txt  mp_netshim_tests.cpp
tools/: audit_char16_ondisk_io.py  detect_xml_curelement_desync.py  lint_string_sinks.py  string_sink_baseline.json
web-runner/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run-game.sh
